# mcgoldng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2_mixer.cmake
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  FILE_FORMATS.md
docs/images/: README.md
src/: main.cpp
src/assets/: fit_parser.cpp  fit_parser.h  fst_reader.cpp  fst_reader.h  lz_decompress.cpp  lz_decompress.h  nested_pak_reader.cpp  nested_pak_reader.h  pak_reader.cpp  pak_reader.h  shape_reader.cpp  shape_reader.h  tga_loader.cpp  tga_loader.h
src/audio/: audio_system.cpp  audio_system.h  music_manager.cpp  music_manager.h
src/core/: config.cpp  config.h  engine.cpp  engine.h  memory.cpp  memory.h
src/game/: combat.cpp  combat.h  mech.cpp  mech.h  mission.cpp  mission.h
src/graphics/: palette.cpp  palette.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  terrain.cpp  terrain.h  ui.cpp  ui.h
src/video/: smk_player.cpp  smk_player.h
tools/: mcg_extract.cpp  mech_analyze.cpp  pak_inspect.cpp
